...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Align(alignment: .centerStart, child: Text('Inspections List')),
        actions: selectedRowIndex >= 0
            ? [
                IconButton(
                  onPressed: () {
                    Navigator.push(context, InspectionFormPage.route(formData: selectedRow!, mode: 'Edit'));
                  },
...
